# Pick-and-place---Franka-Emika-Panda

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
config/: pick_and_place_params.yaml
launch/: pick_n_place.launch
scripts/: aruco_perception.py  color_perception.py  perception_utils.py  pick_and_place_core.py  spawn_aruco_cube.py  spawn_blue_cube.py  spawn_green_cube.py  spawn_red_cube.py
