<?xml version="1.0"?>
<package format="2">
  <name>franka_lab_dev</name>
  <version>0.0.0</version>
  <description>The franka_lab_dev package</description>

  <maintainer email="naza@todo.todo">naza</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    </export>
</package>
